feat: Enhance search and song detail display
Updates the brand color and gradient to a new shade of blue.
Expands search functionality to include album names.
Adds album and release year display to the song detail page for richer context.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             },
             colors: {
               brand: {
-                blue: '#0fe06d', // Updated Point Color to #0fe06d
+                blue: '#00c6c6', // Updated Point Color
                 black: '#191414',
                 dark: '#121212',
                 gray: '#282828',
